fixed navbar links to center, added hover, shadow effect and color. Added spacing between navlinks and social links. changed logo with company name.

--- a/src/pages/Header.css
+++ b/src/pages/Header.css
@@ -1,44 +1,52 @@
 * {
     box-sizing: border-box;
-}
-
-.html,
-.body {
     margin: 0;
     padding:0;
 }
 
 #navigation {
-    background-color: green;
-}
-
-div#navLinks .hme {
-    color: white;
+    background-color: #17601D;
 }
 
 .logo,
 .navi {
-    width: 100px;
+    width: 80px;
     height: 100px;
     display: flex;
-
-.navi {
-    display: flex;
-    justify-content: left;
-    margin-right: 100px;
-    background-color: green;
+    
 }
 
-div#social {
-    display: flex;
-    justify-content: flex-end;
-    align-items: end;
-    float: right;
+.logo {
+    border-radius: 50%;
 }
 
+.navbar-nav {
+    gap: 2rem;
 }
+
+.navbar-nav .nav-link {
+    color: white;
+}
+
+.navbar-nav .nav-link:hover {
+    color:  orange;
+    text-shadow: none;
+    transition:  .4s;
+    box-shadow: 1px 1px;
+}
+
+.navbar-nav .nav-link:active,
+.navbar-nav .nav-link:focus {
+    color: white;
+    text-shadow: none;
+}
+
+.social {
+    margin-left: 0;
+}
+
 div#social a {
     color: white;
-    
-    
+    margin-right: 1rem;
+
 }
